Fixed location name wrapping before tablet view

--- a/src/components/menus/TopMenu.module.scss
+++ b/src/components/menus/TopMenu.module.scss
@@ -50,6 +50,7 @@
     gap: 20px;
     align-items: center;
     width: 50%;
+    white-space: nowrap;
     @media (max-width: $desktop) {
       width: 100%;
     }
